2008-10-01  Eli Zaretskii  <eliz@gnu.org>

	* term/internal.el (dos-locale-alist): New alist.
	(dos-codepage-setup): Use it to compute a value of locale with
	which to call set-locale-environment.  Remove code to set
	terminal, keyboard, and file-name encoding (done by
	set-locale-environment).

	* international/mule-cmds.el
	(set-language-environment-nonascii-translation): Fix nonascii
	value for `pc' ``window-system''.
	(set-display-table-and-terminal-coding-system)
	(set-default-coding-systems): Don't special-case `pc'.

2008-10-01  Glenn Morris  <rgm@gnu.org>

	* filesets.el (filesets-menu-name): Fix type.
	(filesets-menu-path, filesets-menu-before): Fix types.
	Change defaults to be consistent with recentf.  (Bug#1056)

2008-09-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* term/xterm.el (xterm-turn-on-modify-other-keys)
	(xterm-turn-off-modify-other-keys, xterm-remove-modify-other-keys):
	Don't forget to pass `terminal' to `send-string-to-terminal'.

2008-09-30  Michael Albinus  <michael.albinus@gmx.de>

	* vc-hooks.el (vc-file-clearprops): Revert change from 2008-09-29.
	(vc-file-not-found-hook): Check, that `buffer-file-name' is
	non-nil.  It is not clear, whether this is only fixing symptoms on
	an error. OTOH, in all other cases, the call of `vc-file-clearprops'
	is embedded by that check.  So it might be TRT.  Suggested by Dan
	Nicolaescu <dann@ics.uci.edu>.

2008-09-30  Eli Zaretskii  <eliz@gnu.org>

	* Makefile.in (ELCFILES): Remove codepage.elc.

	* international/codepage.el: File removed, as even ms-dos doesn't
	need it anymore.

	* loadup.el [ms-dos]: Don't load ccl and codepage.

	* term/internal.el: Remove coding: cookie and no-byte-compile flag.
	(IT-character-translations, cjk-codepages-alist): Remove variables.
	(IT-display-table-setup, dos-cpNNN-setup): Remove functions.
	(IT-unicode-translations): Remove charset and base elements.
	Add translations for Latin-1 characters.
	(IT-setup-unicode-display): Accept a CODING argument.  Don't use